codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__commit_workflow_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
▌ Commit workflow
▌ This drafts a commit message only; it does not run git commit.
▌
▌ Draft a git commit message.
▌
▌ ## Git status
▌ ```text
▌ ## main
▌  M src/lib.rs
▌ ```

Press enter to confirm or esc to go back
