codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

     Default
  1. gpt-5.5 (default)  Frontier model for complex coding, research, and real-
                        world work.
     Fast
  2. gpt-5.4            Strong model for everyday coding.
     Strong reasoning
  3. gpt-5.4-mini       Small, fast, and cost-efficient model for simpler
                        coding tasks.
  4. gpt-5.3-codex      Coding-optimized model.
› 5. gpt-5.2 (current)  Optimized for professional work and long-running
                        agents.
                        Capabilities: vision, reasoning
                        Reasoning levels: low, medium, high, xhigh

  Press enter to confirm or esc to go back
