codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_detail_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  OpenRouter
  openrouter
  https://openrouter.ai/api/v1
  wire: responses  auth: bearer

› 1. Set as default        Use this provider for future sessions.
  2. Choose default model  Set this provider and model for future sessions.
  3. Test connection       Run basic, streaming, and tool-calling checks with
                           model gpt-5.4.
  4. Edit provider         Edit this custom provider.
  5. Delete provider       Remove this custom provider.

  Press enter to confirm or esc to go back
