codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_model_catalog_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Models for openrouter
  Choose a model to use with this provider in future sessions.

     Default
› 1. cap-model (default)  Capability-rich model
                          Capabilities: vision, personality, fast, reasoning
                          Reasoning levels: low, high
                          Service tiers: Fast

  Press enter to confirm or esc to go back
