codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2512
expression: popup
---
  Settings
  Configure settings for Codex.

› 1. Providers   Default: openai
  2. Microphone  Current: System default
  3. Speaker     Current: System default

  Press enter to confirm or esc to go back
